cambio del titulo al centro

--- a/src/views/catalog.handlebars
+++ b/src/views/catalog.handlebars
@@ -27,7 +27,7 @@
     <a href="/UploaderView" class="boton">
         Upload Files
     </a>
-    
+
     <a href="/adminManagerView" class="boton">
         Manage Users Roles
     </a>
@@ -52,7 +52,7 @@
 
 {{#if swPremium}}
 <div class="container-fluid" style="display: inline">
-    <h2>Product Catalog</h2>
+    <h2 style="text-align: center;">Product Catalog</h2>
     <span id="counter" style="display: block"></span>
     <div id="catalogo" class="row"></div>
     <div id="cartid"> {{cart}}</div>
@@ -61,7 +61,7 @@
 
 {{#if swUser}}
 <div class="container-fluid" style="display: inline">
-    <h2>Product Catalog</h2>
+    <h2 style="text-align: center;">Product Catalog</h2>
     <span id="counter" style="display: block"></span>
     <div id="catalogo" class="row"></div>
     <div id="cartid" hidden="true"> {{cart}}</div>
