--- a/src/views/cartStatic.handlebars
+++ b/src/views/cartStatic.handlebars
@@ -11,7 +11,8 @@
         Buy your products
     </button>
     
-    <a href="http://localhost:8080/products" class="boton">Return to Main Catalog</a>
+    {{!-- <a href="http://localhost:8080/products" class="boton">Return to Main Catalog</a> --}}
+    <a href="https://ecommerce-production-f895.up.railway.app/products" class="boton">Return to Main Catalog</a>
 
 </div>
 
