--- a/src/views/error.handlebars
+++ b/src/views/error.handlebars
@@ -7,8 +7,8 @@
         <p class="p-b">
         
     
-         <a href="http://localhost:8080/signup" class="back">Signup</a>
-         <a href="http://localhost:8080/login" class="back">Login</a>
+         <a href="https://ecommerce-production-f895.up.railway.app/signup" class="back">Signup</a>
+         <a href="https://ecommerce-production-f895.up.railway.app/login" class="back">Login</a>
 
     </div>
 </div>
