--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -8,20 +8,24 @@
         <h2>Login</h2>
 
         <div class="item-container">
-            <a href="http://localhost:8080/api/github"><i class="fa fa-github" style="font-size: 20px;"></i></a>
+            {{!-- <a href="http://localhost:8080/api/github"><i class="fa fa-github" style="font-size: 20px;"></i></a> --}}
+            <a href="https://ecommerce-production-f895.up.railway.app/api/github"><i class="fa fa-github" style="font-size: 20px;"></i></a>
         </div>
 
         <div class="item-container">
             <p>or login using this option</p>
         </div>
 
-        <form action="http://localhost:8080/api/login" method="post">
+        {{!-- <form action="http://localhost:8080/api/login" method="post"> --}}
+        <form action="https://ecommerce-production-f895.up.railway.app/api/login" method="post">
             <input id="email"  type="text" placeholder="fulanitodetal@example.com" name="email" >
             <input   id="password" type="password" placeholder="Password" name="password">
             <button type="submit">Log in</button>
         </form>
-        <p class="message">Not registered? <a href="http://localhost:8080/signup">Create an account</a></p>
-        <p class="message">Forgot your password? <a href="http://localhost:8080/recoverSendEmail">Click here to reset it</a>
+        {{!-- <p class="message">Not registered? <a href="http://localhost:8080/signup">Create an account</a></p>
+        <p class="message">Forgot your password? <a href="http://localhost:8080/recoverSendEmail">Click here to reset it</a>  --}}
+        <p class="message">Not registered? <a href="https://ecommerce-production-f895.up.railway.app/signup">Create an account</a></p>
+        <p class="message">Forgot your password? <a href="https://ecommerce-production-f895.up.railway.app/recoverSendEmail">Click here to reset it</a>
         </p>
     </div>
 </div>
