--- a/src/views/passwordRecovSendMail.handlebars
+++ b/src/views/passwordRecovSendMail.handlebars
@@ -1,13 +1,13 @@
 <div class="recover-page">
   <div class="form">
     <h2>Recover Password Form</h2>
-    <form action="http://localhost:8080/api/Recover/sendEmail" method="post">
+    <form action="https://ecommerce-production-f895.up.railway.app/api/Recover/sendEmail" method="post">
 
       <input id="email" type="text" placeholder="fulanitodetal@example.com" name="email" />
 
       <button type="submit" id="btnSend">Send Recover Link</button>
 
-      <p class="message">Wanna go Back?<a href="http://localhost:8080/login">Return to Login</a></p>
+      <p class="message">Wanna go Back?<a href="https://ecommerce-production-f895.up.railway.app/login">Return to Login</a></p>
 
     </form>
   </div>
