--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -23,7 +23,7 @@
     <span id="email" hidden="hidden">{{email}}</span>
     <span id="id" hidden="hidden">{{id}}</span>
 
-    <p class="message">Wanna go Back?<a href="http://localhost:8080/products">Return to Main Catalog</a></p>
+    <p class="message">Wanna go Back?<a href="https://ecommerce-production-f895.up.railway.app/products">Return to Main Catalog</a></p>
 
 </form>
 
@@ -45,7 +45,7 @@
     </div>
     <button class="botons" type="submit" id="upd-btn">Actualizar </button>
 
-    <p class="message">Wanna go Back?<a href="http://localhost:8080/products">Return to Main Catalog</a></p>
+    <p class="message">Wanna go Back?<a href="https://ecommerce-production-f895.up.railway.app/products">Return to Main Catalog</a></p>
 
 </form>
 
