--- a/src/views/recover.handlebars
+++ b/src/views/recover.handlebars
@@ -1,7 +1,7 @@
 <div class="recover-page">
   <div class="form">
     <h2>Recover Password Form</h2>
-    <form action="http://localhost:8080/api/Recover/resetpassword" method="post">
+    <form action="https://ecommerce-production-f895.up.railway.app/api/Recover/resetpassword" method="post">
       <div disabled="true">
         <label for="exampleInputEmail1" class="form-label">Token</label>
         <input type="text" name="token_"  class="form-control p-2" id="token_">
@@ -15,7 +15,7 @@
         <input type="password" name="password2" class="form-control p-2" id="password2">
       </div>
       <button type="submit" id="btnSend">Cambiar Contraseña</button>
-      <p class="message">Wanna go Back?<a href="http://localhost:8080/login">Return to Login</a></p>
+      <p class="message">Wanna go Back?<a href="https://ecommerce-production-f895.up.railway.app/login">Return to Login</a></p>
 
     </form>
   </div>
