--- a/src/views/signup.handlebars
+++ b/src/views/signup.handlebars
@@ -1,7 +1,7 @@
 <div class="signup-page">
   <div class="form">
     <h2>Signup Form</h2>
-    <form action="http://localhost:8080/api/signup" method="post">
+    <form action="https://ecommerce-production-f895.up.railway.app/api/signup" method="post">
 
       <label for="firstname">First Name </label>
       <input id="firstname" type="text" placeholder="Albert" name="firstname" required />
@@ -31,7 +31,7 @@
           Volver al login
         </button> --}}
 
-        <p class="message">Wanna go Back?<a href="http://localhost:8080/login">Return to Login</a></p>
+        <p class="message">Wanna go Back?<a href="https://ecommerce-production-f895.up.railway.app/login">Return to Login</a></p>
 
     </form>
   </div>
