--- a/src/views/adminManager.handlebars
+++ b/src/views/adminManager.handlebars
@@ -2,7 +2,7 @@
 
 <form id="formManager" class="form">
     <h2>Administrator Manager</h2>
-    <p class="message">Wanna go Back?<a href="http://localhost:8080/products">Return to Main Catalog</a></p>
+    <p class="message">Wanna go Back?<a href="https://ecommerce-production-f895.up.railway.app/products">Return to Main Catalog</a></p>
     <div id="GVUsersInfo" hidden="hidden"></div>
 </form>
 
