--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -9,7 +9,7 @@
 
         <div class="item-container">
             {{!-- <a href="http://localhost:8080/api/github"><i class="fa fa-github" style="font-size: 20px;"></i></a> --}}
-            <a href="https://ecommerce-production-f895.up.railway.app/api/github"><i class="fa fa-github" style="font-size: 20px;"></i></a>
+            <a href="https://ecommerce-production-f895.up.railway.app/api/github"><i class="fa fa-github" style="font-size:48px;color:red"></i></a>
         </div>
 
         <div class="item-container">
